oopsie left dangling package thing i am not using

--- a/default.project.json
+++ b/default.project.json
@@ -5,10 +5,7 @@
 
     "ReplicatedStorage": {
       "Notebook": {
-        "$path": "src/Notebook",
-        "Packages": {
-          "$path": "Packages"
-        }
+        "$path": "src/Notebook"
       }
     },
 
