my email continues to prove itself to be true

--- a/default.project.json
+++ b/default.project.json
@@ -1,12 +1,6 @@
 {
-  "name": "notebookuilib",
+  "name": "notebookui",
   "tree": {
-    "$className": "DataModel",
-
-    "ReplicatedStorage": {
-      "Notebook": {
-        "$path": "src/Notebook"
-      }
-    }
+    "$path": "src"
   }
 }
